--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="card">
       <div class="icon-wrapper">
-        <img class="star-icon" src="./images/icon-star.svg" />
+        <img class="star-icon" src="./images/icon-star.svg" alt="star icon" />
       </div>
       <h1 class="card__title">How did we do?</h1>
 
